[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Thomas Zumsteg <thomas.zumsteg@gmail.com>"]
edition = "2018"

[lib]
path="src/main.rs"
name="cryptopals"

[dependencies]
reqwest = "0.9.19"

# [[bin]]
# name="decode-string"
# path="src/decode-string.rs"

# [[bin]]
# name="decode-url"
# path="src/decode-url.rs"

# [[bin]]
# name="decode-long"
# path="src/decode-long.rs"
