[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Thomas Zumsteg <thomas.zumsteg@gmail.com>"]
edition = "2018"

[lib]
path="src/main.rs"
name="cryptopals"

[dependencies]
reqwest = "0.9.19"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name="decode-string"
path="src/decode-string.rs"

[[bin]]
name="decode-long"
path="src/decode-long.rs"

[[bin]]
name="decode-aes"
path="src/decode-aes.rs"
